grammar.js
		source_file: $ => seq(
			optional($.shebang_line),
			optional(seq(repeat1($.file_annotation), $._semi)),
			optional($.package_header),
			repeat($.import_header),
			repeat(seq($._statement, $._semi))
		),

		class_declaration: $ => prec.right(choice(
			seq(
				optional($.modifiers),
				choice("class", seq(optional("fun"), "interface")),
				field("identifier", alias($.simple_identifier, $.type_identifier)),
				optional($.type_parameters),
				optional($.primary_constructor),
				field("delegation_specifiers", optional(seq(":", $._delegation_specifiers))),
				optional($.type_constraints),
				field("class_body", optional($.class_body))
		    ),
			seq(
				optional($.modifiers),
				"enum",
				"class",
				field("identifier", alias($.simple_identifier, $.type_identifier)),
				optional($.type_parameters),
				optional($.primary_constructor),
				field("delegation_specifiers", optional(seq(":", $._delegation_specifiers))),
				optional($.type_constraints),
				field("enum_class_body", optional($.enum_class_body))
			)
		)),

		primary_constructor: $ => seq(
			optional(seq(optional($.modifiers), "constructor")),
			$._class_parameters
		),

		class_body: $ => seq("{", optional($._class_member_declarations), "}"),

		_class_parameters: $ => seq("(", optional(sep1($.class_parameter, ",")), ")"),

		class_parameter: $ => seq(
			optional($.modifiers),
			optional(choice("val", "var")),
			$.simple_identifier,
			":",
			$._type,
			optional(seq("=", $._expression))
		),

		_delegation_specifiers: $ => prec.left(sep1(
			$.delegation_specifier,
			// $._annotated_delegation_specifier, // TODO: Annotations cause ambiguities with type modifiers
			","
		)),

		delegation_specifier: $ => prec.left(choice(
			field("constructor_invocation", $.constructor_invocation),
			$.explicit_delegation,
			field("user_type", $.user_type),
			$.function_type
		)),

		constructor_invocation: $ => seq($.user_type, $.value_arguments),

		type_parameters: $ => seq("<", sep1($.type_parameter, ","), ">"),

		type_parameter: $ => seq(
			optional($.type_parameter_modifiers),
			alias($.simple_identifier, $.type_identifier),
			optional(seq(":", $._type))
		),

		_class_member_declarations: $ => repeat1(seq($._class_member_declaration, $._semis)),

		_function_value_parameters: $ => seq("(", optional(sep1($._function_value_parameter, ",")), ")"),

		function_declaration: $ => prec.right(seq( // TODO
			optional($.modifiers),
			optional($.type_parameters),
			"fun",
			optional($.type_parameters),
			optional($._receiver_types),
			field("identifier", $.simple_identifier),
			$._function_value_parameters,
			optional(seq(":", $._type)),
			optional($.type_constraints),
			field("function_body", optional($.function_body))
		)),

        // TODO
		_receiver_types: $ => repeat1(
		    seq(optional($.type_modifiers),
		        choice(
		            $.simple_identifier
                ),
                optional($.type_arguments),
                ".")
		),

		function_body: $ => choice(
		    $._block,
		    seq("=", field("expression", $._expression))
		),

		variable_declaration: $ => seq(
			// repeat($.annotation), TODO
			field("identifier", $.simple_identifier),
			optional(seq(":", $._type))
		),

		property_declaration: $ => prec.right(seq(
			optional($.modifiers),
			choice("val", "var"),
			optional($.type_parameters),
			// TODO: Receiver type
			choice(
			    field("variable_declaration", $.variable_declaration),
			    field("multi_variable_declaration", $.multi_variable_declaration)
			),
			optional($.type_constraints),
			optional(choice(
				seq("=", $._expression),
				$.property_delegate
			)),
			seq(
				// TODO: Getter-setter combinations
				optional($.getter),
				optional($.setter),
				optional($.getter)
			)
		)),

		getter: $ => prec.right(seq(
			optional($.modifiers),
			"get",
			optional(seq(
				"(", ")",
				optional(seq(":", $._type)),
				$.function_body
			))
		)),

		parameter: $ => seq(field("identifier", $.simple_identifier), ":", $._type),

		object_declaration: $ => prec.right(seq(
			optional($.modifiers),
			"object",
			alias($.simple_identifier, $.type_identifier),
			optional(seq(":", $._delegation_specifiers)),
			optional($.class_body)
		)),

		secondary_constructor: $ => seq(
			optional($.modifiers),
			"constructor",
			$._function_value_parameters,
			optional(seq(":", $.constructor_delegation_call)),
			optional($._block)
		),

		constructor_delegation_call: $ => seq(choice("this", "super"), $.value_arguments),

		// ==========
		// Enum classes
		// ==========

		enum_class_body: $ => seq(
			"{",
			optional($._enum_entries),
			optional(seq(";", optional($._class_member_declarations))),
			"}"
		),

		_enum_entries: $ => seq(sep1($.enum_entry, ","), optional(",")),

		enum_entry: $ => seq(
			optional($.modifiers),
			$.simple_identifier,
			optional($.value_arguments),
			optional($.class_body)
		),

		// ==========
		// Types
		// ==========

		_type: $ => seq(
			optional($.type_modifiers),
			choice(
				$.parenthesized_type,
				$.nullable_type,
				$._type_reference,
				$.function_type
			)
		),

		_type_reference: $ => choice(
			$.user_type,
			"dynamic"
		),

		nullable_type: $ => seq(
			field("type", choice($._type_reference, $.parenthesized_type)),
			repeat1($._quest)
		),

		_quest: $ => "?",

		// TODO: Figure out a better solution than right associativity
		//       to prevent nested types from being recognized as
		//       unary expresions with navigation suffixes.

		user_type: $ => prec.right(sep1($._simple_user_type, ".")),

		_simple_user_type: $ => prec.right(seq(
			field("identifier", alias($.simple_identifier, $.type_identifier)),
			optional($.type_arguments)
		)),

		type_projection: $ => choice(
			seq(optional($.type_projection_modifiers), $._type),
			"*"
		),

		statements: $ => seq(
			$._statement,
			repeat(seq($._semis, $._statement)),
			optional($._semis),
		),

		_statement: $ => choice(
			$._declaration,
			seq(
				repeat(choice($.label, $.annotation)),
				choice(
					$.assignment,
					$._loop_statement,
					$._expression
				)
			)
		),

		control_structure_body: $ => choice(
		    $._block,
		    field("statement", $._statement)
		),

		_block: $ => prec(PREC.BLOCK, seq("{", field("block_statements", optional($.statements)), "}")),

		_semi: $ => /[\r\n]+/,

		_semis: $ => /[\r\n]+/,

		_expression: $ => choice(
			$._unary_expression,
			$._binary_expression,
			$._primary_expression
		),

		// Unary expressions

		call_expression: $ => prec.left(PREC.POSTFIX, seq($._expression, $.call_suffix)),

		navigation_expression: $ => prec.left(PREC.POSTFIX, seq(field("expression", $._expression), field("navigation_suffix", $.navigation_suffix))),

		// TODO: Postfix type arguments conflict naturally with 'less than'.
		//       Possible solutions include listing this conflict
		//       between 'unary_expression' and 'binary_expression'
		//       in the array of LR(1) conflicts at the top.

		additive_expression: $ => prec.left(PREC.ADDITIVE, seq(field("left", $._expression), $._additive_operator, field("right", $._expression))),

		range_expression: $ => prec.left(PREC.RANGE, seq(field("left", $._expression), "..", field("right", $._expression))),

		navigation_suffix: $ => seq(
			$._member_access_operator,
			choice(
				field("identifier", $.simple_identifier),
				$.parenthesized_expression,
				"class"
			)
		),

		call_suffix: $ => prec.left(seq(
			// optional($.type_arguments), // TODO: Type args conflict with 'less than', see above
			choice(
				seq(field("value_arguments", optional($.value_arguments)), field("annotated_lambda", $.annotated_lambda)),
				field("value_arguments", $.value_arguments)
			)
		)),

		type_arguments: $ => prec.left(PREC.TYPE_ARGS, seq("<", sep1($.type_projection, ","), ">")),

		value_arguments: $ => seq("(", optional(sep1($.value_argument, ",")), ")"),

		value_argument: $ => seq(
			optional($.annotation),
			optional(seq(field("value_argument_identifier", $.simple_identifier), "=")),
			optional("*"),
			field("expression", $._expression)
		),

		line_string_literal: $ => seq('"', repeat(choice($._line_string_content, $._interpolation)), '"'),

		_line_string_content: $ => choice(
			$._line_str_text,
			$._line_str_escaped_char
		),

		_interpolation: $ => choice(
			seq("${", alias($._expression, $.interpolated_expression), "}"),
			seq("$", alias($.simple_identifier, $.interpolated_identifier))
		),

		when_subject: $ => seq(
			"(",
			optional(seq(
				repeat($.annotation),
				"val",
				$.variable_declaration,
				"="
			)),
			field("expression", $._expression),
			")",
		),

		when_expression: $ => seq(
			"when",
			field("subject", optional($.when_subject)),
			"{",
			field("entries", repeat($.when_entry)),
			"}"
		),

		when_entry: $ => seq(
			choice(
				field("conditions", sep1($.when_condition, ",")),
				field("conditions", $.when_entry_else)
			),
			"->",
			field("body", $.control_structure_body),
			optional($._semi)
		),

		when_condition: $ => choice(
			field("expression", $._expression),
			field("range_test", $.range_test),
			field("type_test", $.type_test)
		),

		range_test: $ => seq($._in_operator, field("expression", $._expression)),

		type_test: $ => seq($._is_operator, field("expression", $._expression)),

		jump_expression: $ => choice(
			seq("throw", field("throw_expression", $._expression)),
			seq(choice("return", $._return_at), field("return_expression", optional($._expression))),
			"continue",
			$._continue_at,
			"break",
			$._break_at
		),

		_in_operator: $ => choice("in", "!in"),

		_is_operator: $ => choice("is", $._not_is),

		_additive_operator: $ => choice("+", "-"),

		_member_access_operator: $ => choice(".", $._safe_nav, "::"),

		modifiers: $ => choice(
		    $.annotation,
		    repeat1($._modifier),
		    seq($.annotation, repeat1($._modifier)),
		    seq(repeat1($._modifier), $.annotation)
		),

		_modifier: $ => choice(
			$.class_modifier,
			$.member_modifier,
			$.visibility_modifier,
			$.function_modifier,
			$.property_modifier,
			$.inheritance_modifier,
			$.parameter_modifier,
			$.platform_modifier
		),

		class_modifier: $ => choice(
			"sealed",
			"annotation",
			"data",
			"inner"
		),

		member_modifier: $ => choice(
			"override",
			"lateinit"
		),

		visibility_modifier: $ => choice(
			"public",
			"private",
			"internal",
			"protected"
		),

		function_modifier: $ => choice(
			"tailrec",
			"operator",
			"infix",
			"inline",
			"external",
			"suspend"
		),

		inheritance_modifier: $ => choice(
			"abstract",
			"final",
			"open"
		),

		annotation: $ => choice(
			$.single_annotation,
			$.multi_annotation,
		),

		simple_identifier: $ => $._lexical_identifier, // TODO

		_return_at: $ => seq("return@", $._lexical_identifier),

		_continue_at: $ => seq("continue@", $._lexical_identifier),

		_break_at: $ => seq("break@", $._lexical_identifier),

		integer_literal: $ => token(seq(optional(/[1-9]/), DEC_DIGITS)),

		hex_literal: $ => token(seq("0", /[xX]/, HEX_DIGITS)),

		boolean_literal: $ => choice("true", "false"),

		_lexical_identifier: $ => choice(
			/[a-zA-Z_][a-zA-Z_0-9]*/,
			/`[^\r\n`]+`/
		),
