corpus/annotations.txt
==================
Annotations
==================

@Test
class Empty

---

(source_file
	(class_declaration
        (modifiers (annotation (user_type (type_identifier))))
        (type_identifier)))

==================
Annotations with arguments
==================

@JsonIgnoreProperties(ignoreUnknown = true)
class Empty

---
(source_file
	(class_declaration
		(modifiers
			(annotation
				(constructor_invocation
					(user_type (type_identifier))
					(value_arguments (value_argument (simple_identifier) (boolean_literal))))))
    (type_identifier)))

==================
Annotations with use-site-target
==================

class Empty(@field:Test val x: Boolean)

---

(source_file
	(class_declaration
        (type_identifier)
        (primary_constructor (class_parameter
            (modifiers (annotation (use_site_target) (user_type (type_identifier))))
            (simple_identifier)
            (user_type (type_identifier))))))

==================
Multi-annotations
==================

@set:[Inject VisibleForTesting]
var x: Int

---

(source_file
    (property_declaration
        (modifiers (annotation (use_site_target) (user_type (type_identifier)) (user_type (type_identifier))))
        (variable_declaration (simple_identifier) (user_type (type_identifier)))))
